--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -21,6 +21,7 @@
 @import 'less/page/cta.less';                                                                                                              
 @import 'less/page/benefits.less';
 @import 'less/page/plans.less'; 
-@import 'less/page/faq.less';                                                                                                                                                                                                                                                                            
+@import 'less/page/faq.less';    
+@import 'less/page/testimonials.less';                                                                                                                                                                                                                                                                                               
 @import 'less/page/footer.less';   
 @import 'less/page/theme.less';              
