--- a/assets/css/less/page/banner.less
+++ b/assets/css/less/page/banner.less
@@ -57,6 +57,15 @@
                color: #F0F8FF;
             }
         }
+
+        .button__info {
+            font-size: 10px;
+            color: #F0F8FF;
+            padding-left: 16px;
+            display: block;
+            width: fit-content;
+            margin-top: 4px;
+        }
        
     }
 
@@ -85,9 +94,14 @@
                 margin-bottom: 32px;
             }
 
-            .button {
+            .button,
+            .button__info {
                 margin-left: auto;
                 margin-right: auto;
+            }
+
+            .button__info {
+                padding-left: 0;
             }
         }
     }
