--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -467,6 +467,14 @@ nav {
   background-color: #0184FE;
   color: #F0F8FF;
 }
+.page__banner .wrapper .button__info {
+  font-size: 10px;
+  color: #F0F8FF;
+  padding-left: 16px;
+  display: block;
+  width: fit-content;
+  margin-top: 4px;
+}
 @media (max-width: 1200px) {
   .page__banner {
     background-image: url('../img/bg-banner-mobile.png'), linear-gradient(to bottom, #477AD8 0%, #3A62AA 30%, #0F0F14 100%);
@@ -491,9 +499,13 @@ nav {
     padding-right: 17px;
     margin-bottom: 32px;
   }
-  .page__banner .wrapper .button {
+  .page__banner .wrapper .button,
+  .page__banner .wrapper .button__info {
     margin-left: auto;
     margin-right: auto;
+  }
+  .page__banner .wrapper .button__info {
+    padding-left: 0;
   }
 }
 .page__numbers {
@@ -972,6 +984,7 @@ nav {
   display: flex;
   justify-content: center;
   gap: 84px;
+  padding-bottom: 100px;
 }
 .page__plans .wrapper .plans__cards .plan__card {
   position: relative;
@@ -1101,10 +1114,42 @@ nav {
 .page__plans .wrapper .plans__cards .plan__card.highlight .card__content {
   background-color: #131313;
 }
+.page__plans .wrapper .free-trial {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.page__plans .wrapper .free-trial .text {
+  font-size: 52px;
+  font-weight: 700;
+  color: #F0F8FF;
+  margin-bottom: 50px;
+  text-align: center;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.page__plans .wrapper .free-trial .button {
+  background-image: linear-gradient(38deg, #131313 1%, #000 26%, #0184FE 100%);
+  padding: 12px 68px;
+  border-radius: 30px;
+  color: #F0F8FF;
+  border: 1px solid #F0F8FF;
+  font-size: 18px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-weight: 600;
+  text-align: center;
+  transition: all linear 0.15s;
+}
+.page__plans .wrapper .free-trial .button:hover {
+  background-image: linear-gradient(38deg, #131313 1%, #000 6%, #0184FE 100%);
+  box-shadow: 2px 2px 20px #F0F8FF;
+  color: #F0F8FF;
+}
 @media (max-width: 1200px) {
   .page__plans {
     padding-top: 60px;
-    padding-bottom: 60px;
+    padding-bottom: 80px;
   }
   .page__plans .wrapper .title {
     font-size: 42px;
@@ -1122,6 +1167,11 @@ nav {
     flex-direction: column;
     align-items: center;
     gap: 42px;
+    padding-bottom: 60px;
+  }
+  .page__plans .wrapper .free-trial .text {
+    font-size: 32px;
+    margin-bottom: 32px;
   }
 }
 .page__faq {
