--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -945,8 +945,8 @@ nav {
   }
 }
 .page__plans {
-  padding-top: 90px;
-  padding-bottom: 142px;
+  padding-top: 120px;
+  padding-bottom: 120px;
   background-image: url('../img/bg-plans.png');
   background-repeat: no-repeat;
   background-size: cover;
@@ -955,6 +955,11 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 1220px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 24px;
+  padding-right: 24px;
 }
 .page__plans .wrapper .title {
   width: fit-content;
@@ -984,7 +989,7 @@ nav {
   display: flex;
   justify-content: center;
   gap: 84px;
-  padding-bottom: 100px;
+  padding-bottom: 60px;
 }
 .page__plans .wrapper .plans__cards .plan__card {
   position: relative;
@@ -1113,6 +1118,93 @@ nav {
 }
 .page__plans .wrapper .plans__cards .plan__card.highlight .card__content {
   background-color: #131313;
+}
+.page__plans .wrapper .setup {
+  position: relative;
+  width: 100%;
+  margin-bottom: 80px;
+  max-width: 1169px;
+}
+.page__plans .wrapper .setup .card__title {
+  position: absolute;
+  width: 226px;
+  left: calc(50% - 113px);
+  top: 0;
+  background-image: linear-gradient(38deg, #131313 1%, #000 26%, #0184FE 100%);
+  border-radius: 20px;
+  padding-top: 8px;
+  padding-bottom: 7px;
+  z-index: 2;
+}
+.page__plans .wrapper .setup .card__title h3 {
+  font-size: 24px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #F0F8FF;
+  text-align: center;
+}
+.page__plans .wrapper .setup .card__content {
+  display: flex;
+  align-items: center;
+  gap: 42px;
+  padding: 40px 72px 30px 72px;
+  margin-top: 23px;
+  position: relative;
+  background: transparent;
+  border-radius: 20px;
+  color: white;
+  z-index: 1;
+  /* Mantém o conteúdo acima do fundo */
+}
+.page__plans .wrapper .setup .card__content::before {
+  content: "";
+  position: absolute;
+  inset: -4px;
+  /* Expande a borda para fora */
+  border-radius: 24px;
+  padding: 4px;
+  /* Define a largura da borda */
+  background: linear-gradient(to bottom, #fff, #66b6f75e);
+  /* Gradiente da borda */
+  -webkit-mask: linear-gradient(white, white) content-box, linear-gradient(white, white);
+  mask: linear-gradient(white, white) content-box, linear-gradient(white, white);
+  -webkit-mask-composite: destination-out;
+  mask-composite: exclude;
+  z-index: -1;
+}
+.page__plans .wrapper .setup .card__content .price {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.page__plans .wrapper .setup .card__content .price .value {
+  display: flex;
+  gap: 4px;
+  font-family: "Russo One", sans-serif;
+  font-weight: 400;
+  color: #FFF;
+}
+.page__plans .wrapper .setup .card__content .price .value .coin {
+  align-self: flex-start;
+  font-size: 14px;
+}
+.page__plans .wrapper .setup .card__content .price .value .number {
+  font-size: 72px;
+  line-height: 75%;
+}
+.page__plans .wrapper .setup .card__content .price .info {
+  font-family: "Russo One", sans-serif;
+  font-weight: 400;
+  text-align: center;
+  font-size: 16px;
+}
+.page__plans .wrapper .setup .card__content .description {
+  font-size: 14px;
+  color: #FFF;
+  font-weight: 400;
+}
+.page__plans .wrapper .setup .card__content .description span {
+  font-weight: 700;
 }
 .page__plans .wrapper .free-trial {
   display: flex;
